fix: trie structure and methods